--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,13 @@ body {
   font-family: 'Press Start 2P', monospace;
   text-align: center;
   background-color: #F1F1F1;
-  /* background-color: #f1f1f1; */
   /* disable text highlighting */
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Old versions of Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   /* disable scrolling */
   overflow: hidden;
 }
@@ -47,9 +46,9 @@ h2 {
   margin-top: 2%;
 }
 
-.container {
+.btns-container {
   display: block;
-  width: 50%;
+  width: 500px;
   margin: auto;
 }
 
@@ -66,7 +65,7 @@ h2 {
 
 .controls {
   font-size: 1rem;
-  margin: 3%
+  margin: 3%;
 }
 
 .dark-controls {
@@ -185,6 +184,22 @@ h2 {
 
 .align-self-center {
   align-self: center;
+}
+
+.avoid-wrap {
+  display: inline-block;
+}
+
+.hotkey {
+  display: inline-block;
+}
+
+.hotkey::first-letter {
+  text-decoration: underline;
+}
+
+.hotkey-gone::first-letter {
+  text-decoration: none;
 }
 
 .pop-over {
